# boombot

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  lavalink.yml  pyproject.toml  requirements.txt
lavalink/: application.yml
src/: app.py
src/boombot/: __init__.py  bot.py
src/boombot/embeds/: general.py  lavaplayer.py
src/boombot/extensions/: lavaplayer.py  lavasnek.py  miru.py
src/boombot/views/: lavaplayer.py
